force-app/main/default/objects/XactlyExpress__XCLiability__c/XactlyExpress__XCLiability__c.object-meta.xml
<CustomObject>
    <label>XCLiability</label>
    <nameField>
        <label>XCLiabilities Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XCLiabilities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>