force-app/main/default/objects/XactlyExpress__XCLiability__c/fields/XactlyExpress__Adjustment__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Adjustment__c</fullName>
    <label>Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>