force-app/main/default/objects/XactlyExpress__XCLiability__c/fields/XactlyExpress__Balance__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Balance__c</fullName>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>