force-app/main/default/objects/XactlyExpress__XCLiability__c/fields/XactlyExpress__XCPeriod__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__XCPeriod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>XCPeriod</label>
    <referenceTo>XactlyExpress__XCPeriod__c</referenceTo>
    <relationshipLabel>XCLiabilities</relationshipLabel>
    <relationshipName>XCLiabilities</relationshipName>
    <type>Lookup</type>
</CustomField>